[tool.poetry]
name = "realworld"
version = "0.1.0"
description = ""
authors = ["elias-ka <48407293+elias-ka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.16"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
fastapi = "^0.97.0"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
psycopg = { extras = ["binary"], version = "^3.1.9" }


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"


[tool.poetry.group.typing.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = [
    "W",   # pycodestyle warnings
    "N",   # pep-8 naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "ICN", # flake8-import-conventions
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific
]
